fixed bg on mobile issue workaround, by making bg not fixed for devices smaller than tablet

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,7 +88,6 @@ body, html, main {
 
 .cd-fixed-bg {
     min-height: 100%;
-    background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
     position: relative;
@@ -97,6 +96,14 @@ body, html, main {
     -o-background-size: cover;
     background-size: cover;
 }
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+    .cd-fixed-bg {
+    background-attachment: fixed;
+    }
+}
+
 
 .cd-fixed-bg.cd-bg-2 {
     background-image: url("../images/registryWC.JPG");
